Fixes overflow of games under inspection on narrow viewports

--- a/src/index.css
+++ b/src/index.css
@@ -659,10 +659,6 @@ button:enabled,
   and (min-width: 850px)
   and (max-height: 915px) {
 
-  #root {
-    /* height: 100vh; */
-  }
-
   .game {
     grid-template-rows: 1.5rem 3.25rem 175px 4.5rem auto 2rem;
     grid-template-areas:
@@ -797,9 +793,8 @@ button:enabled,
   }
 
   .game.inspecting {
-    max-height: 450px;
     min-height: 450px;
-    min-width: 100%;
+    max-height: none;
     grid-template-rows: 1.5rem 3rem auto calc(40px - 2rem) 2rem;
     grid-template-columns: 175px 1fr 1fr auto 75px;
     grid-template-areas:
@@ -837,6 +832,10 @@ button:enabled,
 
   .game.inspecting .gamecard-visual {
     display: flex;
+  }
+
+  .game.inspecting .gamecard-variable {
+    overflow: visible;
   }
 
   .gamecard-upvoted-attributes,
@@ -883,8 +882,8 @@ button:enabled,
   .game.inspecting,
   .gamecard-variable,
   .gamecard-variable * {
-    height: auto;
-    max-height: none;
+    /* height: auto; */
+    /* max-height: none; */
   }
 }
 
@@ -895,8 +894,6 @@ button:enabled,
   .game {
     text-align: left;
     overflow-x: hidden;
-    min-height: 175px;
-    min-width: 100%;
     grid-template-rows: 1.5rem 1.5rem auto;
     grid-template-columns: 75px auto;
     grid-template-areas:
@@ -906,8 +903,7 @@ button:enabled,
   }
 
   .game.inspecting {
-    min-height: 450px;
-    min-width: 100%;
+    max-height: none;
     grid-template-rows: 1.5rem 1.5rem 1.5rem auto calc(40px - 2rem) 2rem;
     grid-template-columns: 75px auto;
     grid-template-areas:
